<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="upgrade">Upgrade</string>
    <string name="filter_string">Search…</string>
    <string name="hint_drawer">Pull the left edge of the screen to the right to navigate.</string>

    <!-- Activities, titles -->
    <string name="flavors">Taste Map</string>
    <string name="map">Distillery Map</string>
    <string name="list">List</string>
    <string name="bar">My Bar</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>
    <string name="add_whisky">Add Whisky</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Taste Map</item>
        <item>Whisky List</item>
        <item>Distillery Map</item>
        <item>Distillery List</item>
        <item>My Bar</item>
        <item>Settings</item>
        <item>About</item>
        <item>Upgrade</item>
    </string-array>

    <!-- Map Choices -->
    <string-array name="map_display_choices">
        <item>All Whiskys</item>
        <item>My Bar</item>
    </string-array>

    <!-- Sonstiges -->
    <string name="distillery">Distillery</string>
    <string name="navigation">Navigation</string>
    <string name="button">Button</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_entry">No entry yet</string>

    <!-- DIalogue for the bar adding stuff -->
    <string name="custom_whisky">Custom Whisky.</string>
    <string name="dialog_bar_name">The name of the whisky.</string>
    <string name="dialog_bar_owns">I own this.</string>
    <string name="dialog_bar_owned">I used to own this.</string>
    <string name="dialog_bar_tasted">I tasted this.</string>
    <string name="dialog_bar_wants">I want this!</string>
    <string name="dialog_rating">My Rating:</string>
    <string name="dialog_bar_notes">Notes</string>

    <!-- detail tabs -->
    <string name="tab_taste">TASTE</string>
    <string name="tab_info">DETAILS</string>
    <string name="tab_surrounding">MAP</string>
    <string name="tab_similar">SIMILAR</string>
    <string name="tab_products">PRODUCTS</string>

    <!-- whisky properties -->
    <string name="map_axis_turfsweet">Smoky</string>
    <string name="map_axis_sherrywood">Sherry/Wood</string>
    <string name="intensity">Intensity</string>
    <string name="fruit">Fruit/Sweet</string>
    <string name="sherry">Sherry/Wood</string>
    <string name="turf">Smoky</string>
    <string name="vol">Alcohol Content</string>
    <string name="country">Origin</string>
    <string name="region">Region</string>
    <string name="age">Age</string>

    <string name="turfsweet_low">← Sweet</string>
    <string name="sherrywood">← Sherry/Wood</string>
    <string name="turfsweet_high">Turf →</string>

    <!-- countries -->
    <string name="scotland">Scotland</string>
    <string name="ireland">Ireland</string>
    <string name="england">England</string>
    <string name="wales">Wales</string>

    <!-- preferences -->
    <string name="pref_import_export_title">Import/Export User Data</string>
    <string name="pref_summary_import">You can import saved user data here</string>
    <string name="pref_summary_export">You can export user data here</string>
    <string name="pref_title_import">Import User Data</string>
    <string name="pref_title_export">Export User Data</string>

    <!-- messages -->
    <string name="message_imported">Successfully imported user data!</string>
    <string name="message_exported">Successfully exported user data to %1$s!</string>
    <string name="message_imported_failure">Failed to import user data!</string>
    <string name="message_exported_failure">Failed to export user data!</string>

    <!-- about -->
    <string name="upgrade_sentence"><![CDATA[<p>Download <span class="whisky">Whisky Map</span> from the <a href="https://play.google.com/store/apps/details?id=com.jncreations.whiskymap">Play Store</a>.</p>]]></string>
    <string name="about_html"><![CDATA[
    <!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <link rel="stylesheet" href="styles.css">
</head>
<body>
    <div style="float:right">
        <a href="mailto:whiskyflavourmap@gmail.com"><img src="icons/Mail.png" alt="Send us an email!" /></a>
        &nbsp;
        <a href="https://www.facebook.com/whiskymapapp"><img src="icons/Facebook.png" alt="Visit us on Facebook!" /></a>
    </div>
    <p>Version: {{VERSION}}</p>
    <p><span class="whisky">Whisky Map</span> and <span class="whisky">Whisky Map Lite</span> are supposed to be a guideline for casual whisky drinkers. Due to that, the diversity of tastes of the included whisky types is being simplified in this application.</p> 
<p>The graphic surface (Whisky Map) allows the user to quickly find and pick similar tasting types of whisky. Additional information about distilleries, alcohol content, and origin are provided as well.</p>
{{UPGRADE}}
Included types of whisky:
    <ul>
    <li><span class="whisky">Whisky Map Lite</span>: 60</li>
    <li><span class="whisky">Whisky Map</span>: more than 200</li>
    </ul>
</body>
</html>
    ]]></string>
</resources>
