<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.jncreations.whiskymap.Views.Graphs.TasteGraphView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/graph"
                custom:axisIndicatorColor="@color/whisky"
                custom:xLowLabel="@string/turfsweet_low"
                custom:yLabel="@string/sherrywood"
                custom:xHighLabel="@string/turfsweet_high"
                android:layout_margin="10dp"
                custom:numberWhiskys="0"/>

</ScrollView>