<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashed_border_bottom"
                android:padding="15dp">

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/turf_string"
                    android:text="@string/turf"/>

            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.5"
                    style="@style/whiskyRatingBar"
                    android:id="@+id/whisky_turf"
                    android:layout_alignParentRight="true"
                    android:isIndicator="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashed_border_bottom"
                android:padding="15dp">

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/sherry_string"
                    android:text="@string/sherry"/>

            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.5"
                    style="@style/whiskyRatingBar"
                    android:id="@+id/whisky_sherry"
                    android:layout_alignParentRight="true"
                    android:isIndicator="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashed_border_bottom"
                android:padding="15dp">

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/fruit_string"
                    android:text="@string/fruit"/>

            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.5"
                    style="@style/whiskyRatingBar"
                    android:id="@+id/whisky_fruit"
                    android:layout_alignParentRight="true"
                    android:isIndicator="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashed_border_bottom"
                android:padding="15dp">

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/intensity_string"
                    android:text="@string/intensity"/>

            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.5"
                    style="@style/whiskyRatingBar"
                    android:id="@+id/whisky_intensity"
                    android:layout_alignParentRight="true"
                    android:isIndicator="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

            <com.jncreations.whiskymap.Views.TasteIndicatorDrawable
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/graph"
                    android:layout_below="@+id/text_above"
                    custom:frontColor="@color/whisky_trans"
                    custom:lineColor="@color/text_grey"
                    android:layout_centerHorizontal="true"/>

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_above"
                    custom:assetFontFamiliy="RobotoCondensed-Light"
                    android:text="@string/turf"
                    android:textColor="@color/text_grey"
                    android:textSize="13sp"
                    android:paddingBottom="10dp"
                    android:layout_centerHorizontal="true"/>

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/graph"
                    custom:assetFontFamiliy="RobotoCondensed-Light"
                    android:text="@string/fruit"
                    android:textColor="@color/text_grey"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:layout_centerHorizontal="true"/>

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/graph"
                    custom:assetFontFamiliy="RobotoCondensed-Light"
                    android:text="@string/intensity"
                    android:textColor="@color/text_grey"
                    android:textSize="13sp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"/>

            <com.jncreations.whiskymap.Views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/graph"
                    custom:assetFontFamiliy="RobotoCondensed-Light"
                    android:text="@string/sherry"
                    android:textColor="@color/text_grey"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:layout_centerVertical="true"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>